feat: Add loading components and integrate NextTopLoader for improved loading experience

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mui-tiptap": "1.24.0",
     "nanoid": "5.1.5",
     "next": "15.5.2",
+    "nextjs-toploader": "^3.9.17",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-dropzone": "14.3.8",
